<resources>
    <string name="app_name">Sound Recorder</string>

    <!-- Toolbar -->
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording…</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete…</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_name">Name File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="stop_recording_button">Stop</string>
    <string name="resume_recording_button">Resume</string>
    <string name="save_recording_button">Save</string>
    <string name="recording_button">Record</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>
    <string name="file_name">file name</string>
    <string name="_00_00">00:00</string>
    <string name="mmm_dd_yyyy_hh_mm_a">mmm dd yyyy - hh:mm a</string>
    <string name="file_name_mp3">file_name.mp3</string>

    <string name="search">Search</string>

</resources>