<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:transitionName="open_mediaplayer"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/file_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/file_length_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:textSize="16sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/file_date_added_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mmm_dd_yyyy_hh_mm_a"
                android:textSize="16sp"
                android:fontFamily="sans-serif-condensed" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>